<resources>
    <string name="app_name">Interactive Photo Gallery</string>
    <string name="nothing_found">Nothing found</string>
    <string name="no_internet_connection">Please check your internet connection!</string>
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="photo_number">Photo 1</string>
    <string name="author_name">Author Name</string>
    <string name="about_app">About App</string>
    <string name="settings">Settings</string>
    <string name="about_developer">Developed by Md. Rashad Tanjim</string>
    <string name="night_mode">Change Day Night Mode</string>
    <string name="zoom_in_out">Press Double Tap to Zoom!</string>
    <string name="photo_save">Photo saved in local storage!</string>

</resources>