<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/toolbarBackground"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_scrollFlags="scroll|exitUntilCollapsed"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:title="@string/settings"
        app:titleTextColor="@color/white" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewDayNightMode"
        style="@style/settingsCard"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <ImageButton
            style="@style/settingsImageButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:srcCompat="@drawable/ic_mode" />

        <TextView
            android:id="@+id/textViewMode"
            style="@style/settingsOptionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/night_mode" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/dayNightMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center"
            android:layout_marginEnd="12dp"
            android:checked="false"
            android:gravity="center" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewAboutApp"
        style="@style/settingsCard"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewDayNightMode">

        <ImageButton
            style="@style/settingsImageButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:srcCompat="@drawable/ic_about_app" />

        <TextView
            style="@style/settingsOptionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_app" />

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>